[PPANTT-191] added openapi and unit tests
