# src/main/java/it/gov/pagopa/mdb/gps/service/model/PaymentOption.java
@@ -11,7 +11,6 @@ import lombok.Data;
 import lombok.NoArgsConstructor;
 
 import java.time.LocalDateTime;
-import java.util.ArrayList;
 import java.util.List;
 
 /**
@@ -53,5 +52,5 @@ public class PaymentOption {
 
     @Valid
     @Schema(description = "Payment option's transfer list", requiredMode = Schema.RequiredMode.REQUIRED)
-    private List<@Valid Transfer> transfer = new ArrayList<>();
+    private List<@Valid Transfer> transfer;
 }
